--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-        <lombok.version>1.16.20</lombok.version>
-        <servlet.api.version>2.5</servlet.api.version>
-        <common.lang3.version>3.7</common.lang3.version>
     </properties>
 
     <dependencies>
@@ -22,18 +18,24 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
+            <version>1.18.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.50</version>
+        </dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>${servlet.api.version}</version>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>${common.lang3.version}</version>
+            <version>3.8.1</version>
         </dependency>
     </dependencies>
 </project>
